--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,45 +29,48 @@
 
 
 /*swiper*/
+.swipe-space{
+  width: 90%;
+  height: 300px;
+  margin: 30px 5%;
+  background-color:  #c0c0c0;
+}
 .swiper-container {
     width: 100%;
-    height: 278px;
-    border-radius: 10px;
+    height: 300px;
 }
 .pic1 {
-  width:200px;
-  height:250px;
+  width:300px;
+  height:300px;
   background-image:url("1.jpg") ;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
 .pic2 {
-  width:200px;
-  height:250px;
+  width:300px;
+  height:300px;
   background-image:url("2.jpg");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
 .pic3 {
-  width:200px;
-  height:250px;
+  width:300px;
+  height:300px;
   background-image:url("3.jpg");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
 .pic4 {
-  width:200px;
-  height:250px;
+  width:300px;
+  height:300px;
   background-image:url("4.jpg");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
-
-
 
 
 
@@ -475,14 +478,7 @@ header{
   background-color: #c0c0c0;
   overflow:hidden;
 }
-.swipe-space{
-  width: 75%;
-  height: 280px;
-  margin: 30px 5%;
-  background-color: white;
-  border-radius: 10px;
-  border: solid black 1px;
-}
+
 .ranking-space{
   width: 85%;
   overflow: hidden;
@@ -661,8 +657,7 @@ header{
   border-top: dashed gray 1px;
 }
 .product-detail-field3{
-  width: 40%;
-  height: auto;
+  width: 45%;
   float: left;
   margin: 5px 1% 20px 3%;
   border-top: dashed gray 1px;
@@ -786,18 +781,26 @@ header{
 
 
 /*footer用のCSS*/
+/*footer用のCSS*/
 footer {
   height: 120px;
   background-color: black;
 }
-.footer-text{
+.footer {
+  color:white;
+  float:left;
+  margin:20px 0 0 20px;
+}
+.footer-link {
+  color:white;
+  float:left;
+  margin:40px 0 0 55px;
+}
+.footer-logo{
   width:400px;
   height:100px;
   float:right;
   margin-top:15px;
   background-image:url(logo2.png);
   background-repeat: no-repeat;
-  /*padding-top: 10px;*/
-  /*font-family: "Comic Sans MS";*/
-  /*color: white;*/
 }
