--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -2,28 +2,29 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
- /*/order/show*/
+  /*/order/show*/
 .purchase {
   width:100%;
   padding:30px 0 50px;
-  background-color:#dcdcdc;
  }
- .status-edit {
-  text-align:right;
+ .number-color {
+  background-color: black;
+  color:white;
  }
  .purchase-detail {
   border:solid 1px;
-  border-radius:5px;
-  border-color:#dcdcdc;
   background-color:white;
   padding:10px;
  }
  .purchase1{
-   border:solid 1px;
-  border-color:#dcdcdc;
-  height:90px;
+  border:solid 1px;
+  height:80px;
   background-color:#b0e0e6;
   text-align: center;
+  border-top-color: #dcdcdc;
+  border-left-color: #dcdcdc;
+  border-right-color:#dcdcdc;
+  border-bottom-color: black;
  }
  .date {
   width:150px;
@@ -31,14 +32,8 @@
   line-height:30px;
   float:left;
  }
- .date1 {
-  width:150px;
-  height:30px;
-  line-height:30px;
-  float:left;
- }
  .order-user{
-  width:150px;
+  width:130px;
   height:30px;
   line-height:30px;
   float:left;
@@ -48,6 +43,7 @@
   height:30px;
   line-height:30px;
   float:left;
+  margin-left:10px;
  }
  .order-address{
   width:300px;
@@ -57,22 +53,23 @@
  }
  .order-address1 {
   width:300px;
-  height:30px;
   float:left;
   line-height: none;
  }
  .status {
   text-align:center;
-  float:right;
-  height:60px;
-  line-height: 60px;
-  margin-right:20px;
+  float:left;
+  width:200px;
+  height:30px;
+  line-height: 30px;
+  margin-left:10px;
 }
  .purchase2 {
   border:solid 1px;
-  border-color:#dcdcdc;
   height:145px;
   margin:0 auto;
+  padding:0 20px 0;
+  border-color:#dcdcdc;
  }
  .purchase2-image {
   width:120px;
@@ -80,32 +77,41 @@
   margin:10px 30px 10px 10px;
   float:left;
  }
- .purchase-product {
+ .purchase-artist-box {
   width:300px;
-  height:60px;
   float:left;
-  line-height:60px;
+ }
+ .purchase-product {
+  width:400px;
+  float:left;
+  margin-top:15px;
  }
  .purchase-amount {
-  width:200px;
-  height:60px;
+  height:140px;
   float:right;
-  line-height:60px;
+  padding-top:50px;
  }
  .purchase-price {
   width:200px;
-  height:60px;
-  float:right;
-  line-height:60px;
+  float:left;
  }
 .purchase-artist {
   width:200px;
-  height:30px;
   float:left;
-  line-height:60px;
+}
+.purchase-subtotal {
+  height:140px;
+ float:right;
+ padding-top:50px;
+ margin:0 10px 0 20px;
 }
 .cancel {
+  margin-top:10px;
   float:right;
+}
+.mypage-link {
+  margin-top:10px;
+  float:left;
 }
 
 
@@ -114,38 +120,43 @@
 
  /*order/complete*/
 .complete-back {
- 	width:100%;
- 	height:100%;
- 	padding-top:50px;
- 	background-color: black;
+  width:100%;
+  height:100%;
+  padding-top:50px;
+  background-color: black;
  }
  .complete {
- 	width:700px;
- 	height:400px;
- 	margin:0 auto 100px;
- 	padding-top:20px;
- 	border:outset;
+  width:700px;
+  height:400px;
+  margin:0 auto 100px;
+  padding-top:20px;
+  border:outset;
   background-color:white;
  }
  .complete-big-text {
- 	font-size:40px;
- 	text-align:center;
+  font-size:40px;
+  text-align:center;
  }
  .complete-text {
- 	font-size:20px;
- 	margin:50px 0 30px;
- 	text-align:center;
+  font-size:20px;
+  margin:50px 0 30px;
+  text-align:center;
  }
  .under{
- 	text-decoration: underline;
+  text-decoration: underline;
  }
 .logo {
-	width:380px;
-	height:170px;
-	background-image:url("logo.png");
-	 background-size: cover;
-	 margin:0 auto;
+  width:380px;
+  height:170px;
+  background-image:url("logo.png");
+   background-size: cover;
+   margin:0 auto;
 }
+
+
+
+
+
 
 
 /*order/new*/
@@ -163,10 +174,14 @@ padding:0 0 20px 0;
 border:outset;
 text-align:center;
 }
+.order-color {
+  background-color: black;
+  color: white;
+}
 .order-box {
 margin:0 auto;
 border:inset 3px;
-padding-top:2px;
+padding:5px 5px 5px 5px;
 }
 .sendbox {
 text-align:center;
@@ -177,63 +192,45 @@ width:500px;
 height:30px;
 margin:0 auto;
 }
-.delivery {
-font-size:20px;
-text-align:center;
-height:150px;
-}
-.delivery-box {
-width:500px;
-height:30px;
-margin:10px auto 0 ;
-color:#dcdcdc;
-border:solid 1px;
-border-radius:5px;
-border-color:#dcdcdc;
-}
 .pay {
 text-align:center;
-height:100px;
+border-top:solid 1px #add8e6;
+margin-top:20px;
 }
-.preorder {
-text-align:center;
+.confirm {
+border-top:solid 1px #add8e6;
+margin-top:20px;
 }
 .pre-product {
-width:500px;
+width:520px;
 height:100px;
 border:solid 1px;
 margin:5px auto 10px;
 padding:8px 0 0 8px;
-border-radius: 5px;
-border-color:#dcdcdc;
-}
-.price-table {
-float:right;
-margin:0 10px 10px 0;
 }
 .product-image {
 width:80px;
 height:80px;
-border:solid 1px;
 float:left;
 }
-.order-text {
+.preorder-product {
 float:left;
-line-height: 80px;
+height:80px;
+width:200px;
+text-align: left;
+margin-left:10px;
+padding-top:10px;
 }
-.order-price-box {
- float:right;
- height:90px;
- margin-right:20px;
- padding:10px;
-}
-.order-quantity {
-  height:45px;
-  width:80px;
+.preorder-quantity {
+  height:80px;
+  width:150px;
   float:right;
+  margin-right:20px;
+  padding-top:20px;
 }
-.preorder-price {
-height:45px;
+.price-table {
+float:right;
+margin:0 10px 10px 0;
 }
 
 
