--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -4,23 +4,18 @@
       <div class="col-lg-3">
       </div>
        <div class="order col-lg-6">
-         <h3>注文内容の確認</h3>
-
+         <h2 class="order-color">注文内容の確認</h2>
          <%= form_for([@user,@order]) do |f| %>
           <div class="order-box">
-
 	       <div class="sendbox">
 	         <h4>請求先住所</h4>
-	   	
 	       <div class="address-form">
 	   	     <%= @user.address %>
 	       </div>
 	         <h4>送付先住所の入力</h4>
 	        <div class="address-form">
-
 	        	<%= fields_for(@sub_address) do |s| %>
-
-	        	<%= s.text_field :sub_address, :list =>"sub_address_list", :autocomplete => "off" %>
+	        	<%= s.text_field :sub_address, class: 'form-control',:list =>"sub_address_list", :autocomplete => "off" %>
 	        	<datalist id="sub_address_list">
 					<% @sub_addresses.each do |sub_address| %>
 						<option value="<%= sub_address.sub_address %>"><%= sub_address.sub_address %></option>
@@ -31,44 +26,53 @@
 	       </div>
          <div class="pay">
 	         <h4>支払い方法の選択</h4>
-
 	        	<%= f.collection_select(:payment_id, @payment, :id, :payment_method, prompt: "選択する") %>
-
           </div>
 
-         <div class="preorder clearfix">
-     	  <h4>商品の確認</h4>
-     	  <% @cart.cart_items.each do |cart_item| %>
-           <div class="pre-product clearfix">
-      	    <div class="product-image"><%= attachment_image_tag cart_item.product, :image, :fill, 80, 80, format: 'jpeg' %>
-      	    </div>
-      	     <p class="order-text"><%= cart_item.product.product_name %></p>
-      	      注文数<%= cart_item.cart_quantity %>
-      	     <p class="preorder-price">
-      	     	<% @subtotal = cart_item.product.product_price*cart_item.cart_quantity %>
-      	     	小計<%= @subtotal.to_s(:delimited) %> 円 </p>
-          </div>
-         <% @total_price += cart_item.product.product_price*cart_item.cart_quantity %>
-         <% @total_quantity += cart_item.cart_quantity %>
+         <div class="confirm clearfix">
+     	    <h4>商品の確認</h4>
+     	       <% @cart.cart_items.each do |cart_item| %>
+             <div class="pre-product clearfix">
+      	        <div class="product-image"><%= attachment_image_tag cart_item.product, :image, :fill, 80, 80, format: 'jpeg' %>
+      	         </div>
+      	        <div class="preorder-product">
+      	     	   <h4><%= cart_item.product.product_name %></h4>
+      	           <div class>
+      	     	    <h5><%= cart_item.product.artist.artist_name %></h5>
+      	          </div>
+      	       </div>
+      	          <div class="preorder-quantity">
+      	           注文数：<%= cart_item.cart_quantity %>
+      	           <div class="preorder-price">
+      	     	　<% @subtotal = cart_item.product.product_price*cart_item.cart_quantity %>
+      	     	　小計：<%= @subtotal.to_s(:delimited) %> 円
+      	         </div>
+      	       </div>
+            </div>
 
-         	<% end %>
-      	<table class="price-table">
-		　<tr>
-		　　<td>商品合計数 </td>
-		　　<td><%= @total_quantity %></td>
-		　</tr>
-		　<tr>
-		　　<td>ご請求額 </td>
-		　　<td> <%= @total_price %>円</td>
-		　　 <%= f.hidden_field :order_number, :value => rand(1..9).to_s + "-" + rand(1000..9999).to_s + "-" + rand(1000..9999).to_s %>
-			<%= f.hidden_field :total_price, :value =>"#{@total_price}" %>
-			<%= f.hidden_field :status_id, :value =>1 %>
-		　</tr>
-		 <tr>
-		  <td colspan="2"><%= f.submit "注文" %></td>
-		</tr>
-	　　</table>
+	         <% @total_price += cart_item.product.product_price*cart_item.cart_quantity %>
+	         <% @total_quantity += cart_item.cart_quantity %>
+	         	<% end %>
+
+	      <table class="price-table">
+			<tr>
+			　<td>商品合計数 </td>
+			　<td><h4><%= @total_quantity %></h4></td>
+			</tr>
+			<tr>
+			　<td >ご請求額</td>
+			　<td><h4><%= @total_price.to_s(:delimited) %>円</h4></td>
+
+			　　 <%= f.hidden_field :order_number, :value => rand(1..9).to_s + "-" + rand(1000..9999).to_s + "-" + rand(1000..9999).to_s %>
+				<%= f.hidden_field :total_price, :value =>"#{@total_price}" %>
+				<%= f.hidden_field :status_id, :value =>1 %>
+			</tr>
+		　　 <tr>
+			  <td colspan="2"><%= f.submit "注文を確定する" ,class: "btn btn-success" %></td>
+		　　</tr>
+		</table>
       </div>
+
      </div>
      <% end %>
     </div>
