--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,78 +1,108 @@
 <div class="purchase">
-
   <div class="container">
     <div class="row">
       <div class="col-lg-1">
-
         </div>
           <div class="col-lg-10">
-            <h3>購入番号 <%= @order.order_number%> </h3>
-            <div class="status-edit">
-             <% if admin_signed_in? %>
-               <%= form_for([@user,@order]) do |f| %>
-               <%= f.collection_select(:status_id, @statuses, :id, :shipment_status, prompt: "選択する") %>
-               <%= f.submit "変更する", class: "btn btn-info" %>
-              <% end %>
-             <% end %>
-           </div>
-         <div class="purchase-detail clearfix">
-           
-           <div class="purchase1 clearfix">
-            <div class="date">
-              <h5> 購入日</h5>
-             <div class="date1">
-               <h4> <%= @order.created_at.strftime('%Y/%m/%d')%></h4>
-              </div>
-            </div>
-            <div class="order-user">
-                <h5>購入者</h5>
-              <div class="order-user">
-                 <h4> <%= @user.user_name%></h4>
-              </div>
-           </div>
-             <div class="order-address .order-address1">
-                <h5>送付先住所</h5>
-               <div class="order-address1">
-                 <h4> <%= @user.address%></h4>
-              </div>
-             </div>
-           <div class="price-box">
-                <h5>合計金額</h5>
-           <div class="price-box">
-                <h4><%= @order.total_price %>3,640円</h4>
+            <div class="row">
+              <div class="col-lg-12">
+                <h2 class="number-color">注文商品詳細</h2>
+              </div></div>
+             <div class="row">
+              <div class="col-lg-5">
+                <h3>購入番号［<%= @order.order_number%>］</h3>
+                  </div>
+                <div class="col-lg-4"></div>
+                 <div class="col-lg-3">
+                  <% if admin_signed_in? && @order.status_id != 5 %>
+                    <%= form_for([@user,@order]) do |f| %>
+                      <%= f.collection_select(:status_id, @limit, :id, :shipment_status, prompt: "選択する") %>
+                       <%= f.submit "変更する", class: "btn btn-info" %>
+                    <% end %>
+                  <% end %>
+
+                 <% if admin_signed_in? && @order.status_id == 5 %>
+                    <%= form_for([@user,@order]) do |f| %>
+                     <%= f.hidden_field :status_id, :value => 6 %>
+                      <%= f.submit "キャンセルする", class: "btn btn-danger",data: { confirm: 'キャンセルしますか?' }%>
+                   <% end %>
+                 <% end %>
+               </div>
           </div>
-        </div>
 
-        <div class="status">
-           配送状況：<%= @status.shipment_status %>
-         
-        </div>
-
-      </div>
+      <div class="purchase-detail clearfix">
+         <div class="purchase1">
+             <div class="date">
+               <h5> 購入日</h5>
+              <div>
+                <h4> <%= @order.created_at.strftime('%Y/%m/%d')%></h4>
+                </div>
+              </div>
+                <div class="order-user">
+                  <h5>購入者</h5>
+                   <div>
+                     <h4> <%= @user.user_name%></h4>
+                   </div>
+                 </div>
+                <div class="order-address .order-address1">
+                      <h5>送付先住所</h5>
+                     <div>
+                       <h4> <%= @user.address%></h4>
+                    </div>
+                 </div>
+                <div class="price-box">
+                     <h5>請求金額</h5>
+                  <div>
+                    <h4><%= @order.total_price.to_s(:delimited) %>円</h4>
+                  </div>
+              </div>
+                <div class="status">
+                  <h5>配送状況</h5>
+                  <div>
+                    <h4><%= @status.shipment_status %></h4>
+                </div>
+             </div>
+          </div>
        
            <% @order.order_items.each do |o| %>
-
-      <div class="purchase2 clearfix">
+       <div class="purchase2">
          <div class="purchase2-image">
+            <%= link_to product_path(o.product) do %>
             <%= attachment_image_tag o.product, :image, :fill, 117, 117, format: 'jpeg' %>
+            <% end %>
            </div>
-            <div class="purchase-product">
-              <h3><%= o.product.product_name %></h3>
-             </div>
-              <div class="purchase-amount">
-              <h4>購入数：<%= o.order_quantity %></h4>
+              <div class="purchase-artist-box">
+                <div class="purchase-product">
+                  <h4><%= o.product.product_name %></h4>
+                  </div>
+                   <div class="purchase-artist">
+                     <h4> <%= o.product.artist.artist_name %></h4>
+                   </div>
+                   <div class="purchase-price">
+                  <h5>単価：<%= o.order_item_price %>円</h5>
+                 </div>
+               </div>
+                <div class="purchase-subtotal">
+                 <% @subtotal = o.order_item_price*o.order_quantity %>
+                <h4> 小計：<%= @subtotal.to_s(:delimited) %>円</h4>
               </div>
-             <div class="purchase-price">
-             <h4>小計:円</h4>
+               <div class="purchase-amount">
+              <h4>購入数：<%= o.order_quantity %></h4>
             </div>
-           <div class="purchase-artist">
-            <h4> <%= o.product.artist.artist_name %></h4>
          </div>
-         </div>
-         <% end %>
+          <% end %>
 
-          <div class="cancel"><button class="btn btn-warning">注文をキャンセルする</button>
-         </div>
+          <div class="mypage-link">
+             <%= link_to "マイページへ戻る", user_path(@user), class: "btn btn-info" %>
+             </div>
+            <% if @order.status_id == 1 %>
+            <%= form_for ([@user,@order]) do |s| %>
+                 <div class="cancel">
+                  <%= s.hidden_field :status_id, :value => 5 %>
+                  <%= s.submit "キャンセルリクエスト", class: "btn btn-warning" %>
+                 </div>
+                 <% end %>
+             <% end %>
        </div>
     </div>
 
