--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -37,3 +37,23 @@
   text-align:center !important;
   padding:0 !important;
 }
+
+
+.user_header{
+  padding:10px 0 10px 30px ;
+  margin: 0 0 0 0 !important;
+  background-color: black;
+  color: white;
+  font-weight: 600;
+}
+.user-btn{
+  margin-left: 52px;
+}
+.user_index{
+  background-color: white;
+  margin-bottom: 50px;
+  border: 1px solid #F2F2F2;
+}
+.user_search{
+  margin-top: 50px;
+}
