--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,11 +1,10 @@
-<div class="purchase">
- <div class="container-fulid">
+<div class="container-fulid">
   <div class="row">
-  	<div class="col-lg-1">
-  	 </div>
-  	<div class="col-lg-10">
+    <div class="col-lg-1">
+     </div>
+    <div class="col-lg-10">
       <div class="order_index">
-        <h2>購入履歴一覧</h2>
+        <h2 class="user_header">購入履歴一覧</h2>
         <table class="table table-striped order_index_table">
           <thead class="order_table_head">
             <tr>
@@ -32,8 +31,7 @@
         </table>
       </div>
     </div>
-  	<div class="col-lg-1">
-  	</div>
+    <div class="col-lg-1">
+    </div>
   </div>
- </div>
 </div>
