カートページ修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -364,56 +364,49 @@
 .order_content img {
   margin: 10px 0 10px 10px;
 }
-.testtest {
+.order_content_head {
   background-color: #eeeeee;
   height: 68px;
 }
-.test {
+.order_content_1 {
   float: left;
   text-align: left;
   width: 100px;
   margin-right: 10px;
   margin-left: 10px;
 }
-.test_2 {
+.order_content_3 {
   float: right;
   width: 120px;
   text-align: left;
   margin-right: 10px;
 }
-.text_3 {
+.order_content_2 {
   float: left;
   width: 100px;
   text-align: left;
   margin-right: 10px;
 }
-.test_4 {
+.order_content_4 {
   float: right;
   width: 100px;
   text-align: left;
   margin-right: 10px;
 }
-.test_5 {
+.order_content_bottom {
   height: 120px;
 }
-.test_6 {
+.order_content_5 {
   float: left;
 }
-.test_7 {
-  // display: inline-block;
 
-}
-.test_8 {
-  // display: inline-block;
-
-}
-.asd {
+.order_content_product {
   width: 400px;
   margin-left: 10px;
   text-align: left;
   float: left;
 }
-.test_10 {
+.order_content_6 {
   display: inline-block;
   margin: 50px 0;
   padding-right: 10px;
