--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -13,7 +13,7 @@
               <div class="cart-item">
                 <div class="col-md-2 cart_item_image">
                   <%= link_to product_path(@product) do %>
-                   <%= attachment_image_tag cart_item.product, :image, :fill, 80, 80, format: 'jpeg' %>
+                  <%= attachment_image_tag cart_item.product, :image, :fill, 80, 80, format: 'jpeg', fallback: 'no_image.jpg', :size => '80x80' %>
                     <% end %>
                   </div>
                     <div class="col-md-3 cart_item_box"><%= cart_item.product.product_name %>
