--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -29,3 +29,10 @@
 .q-link {
 	margin-top:50px;
 }
+
+/*index*/
+.contact-box {
+	border-left:solid 1px;
+	border-right:solid 1px;
+	border-bottom:solid 1px;
+}
