--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,1 +1,18 @@
-問い合わせ一覧
+<div class="contact">
+  <div class="container">
+   <div class="row">
+  	<div class="col-lg-2"></div>
+  	  <div class="col-lg-8">
+        <div class="contact-box">
+
+	        <h2 class="contact-h2">お問い合わせ一覧</h2>
+           <div class="contact-user">
+            
+
+       	   </div>
+       </div>
+     </div>
+	   <div class="col-lg-2"></div>
+    </div>
+  </div>
+</div>
