--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,22 +1,6 @@
+<%= render 'products/sidebar', genres: @genres %>
 
-<!-- main部分 -->
-<div class="top-main clearfix">
-   <div class="sidebar-space"></div>
-	  <div class="genre-box">
-		<div class="genre-title">
-			<p class="genre-title-text">カテゴリーで探す</p>
-		  </div>
-		  <ul class="genre-list">
-		  	<!-- ジャンル検索 -->
-			<% @genres.each do |genre| %>
-				<%=link_to genre_path(genre), :style=>"text-decoration: none;" do %>
-				<li class="genre-list-item">
-					<%= genre.genre_name %>
-				</li>
-				<% end %>
-			<% end %>
-		</ul>
-	   </div>
+
 	<div class="top-box2">
 		<%= flash[:complete] %>
 		<div class="product-detail clearfix">
@@ -34,7 +18,12 @@
 				 個数選択<%= f.number_field :cart_quantity, class: 'form-control', min: 1 ,max: @product.stock, :value => 1 %>
 				</div>
 				<div class="in-the-cart">
+					<% if @product.stock == 0 %>
+					申し訳ありません<br>
+					現在入荷待ちです
+					<% else %>
 			　<%= f.submit "カートに入れる", class: "btn btn-primary" %>
+			       <% end %>
 				</div>
 			　<% end %>
 			</div>
@@ -46,6 +35,8 @@
 				  </div>
 				<div>ジャンル：<%= @product.genre.genre_name %>
 				</div>
+				<div>レーベル：<%= @product.label.label_name %>
+				</div>
 				<div><%= @product.disc_amount %>枚組
 				</div>
 				<div>発売日：<%= @product.release %>
@@ -56,7 +47,7 @@
 
 			<div class="product-detail-field2">
 				<%= @product.description %>
-			</div>
+			 </div>
 				<% @product.discs.each do |disc| %>
 			<div class="product-detail-field3">
 					<table class=" table table-striped">
@@ -87,7 +78,12 @@
 				<div class="review-count">
 			     <%= @product.reviews.count %>件のレビュー
 			 </div>
-			    <% end %>
+			 <% end %>
+			    <% if @product.reviews.count >= 3 %>
+			  <div class="comment-scroll">
+			  	<% else %>
+			  	<div>
+			  	<% end %>
 		     <ol>
 			     <% @product.reviews.each do |review| %>
 			  <li class="user-comment">
@@ -97,8 +93,8 @@
 				<div>
 				   投稿日：<%= review.created_at.strftime('%Y/%m/%d') %>
 				</div>
-				<div class="comment-box">
-					<div>
+				  <div class="comment-box">
+					 <div>
 						<% if review.star == 1 %>
 							<div class="star-color">★</div>
 						<% elsif review.star == 2 %>
@@ -110,11 +106,11 @@
 						<% elsif review.star == 5 %>
 							<div class="star-color">★★★★★</div>
 						<% end %>
-					</div>
+					  </div>
 					<div>
 						コメント：<%= review.comment %>
 					</div>
-				</div>
+				  </div>
 				<div class="comment-delete">
 					<% if review.user == current_user %>
 					<%= link_to "削除",product_review_path(product_id: @product.id, id: review.id), method: :delete %>
@@ -124,10 +120,10 @@
 			 <% end %>
 			</ol>
 		</div>
-
+	  </div>
            <% if user_signed_in? %>
 		<div class="product-comment-newbox">
-			レビューを書く
+		 <p class="review-comment">レビューを書く
 <!-- 星評価投稿機能 -->
 	<%= form_for [@product, @review] do |f| %>
 		<div class="evaluation">
@@ -148,6 +144,7 @@
              <% end %>
 		</div>
 		<% end %>
+
 <!-- コメントおわり -->
 
 		<div class="newproduct-space3 clearfix">
@@ -164,7 +161,6 @@
 			</div>
 			<% end %>
 			<% end %>
-
 		</div>
 	</div>
 </div>
