--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -38,15 +38,22 @@
   line-height:30px;
   float:left;
  }
+ .-price {
+  width:80px;
+  height:30px;
+  line-height:30px;
+  float:left;
+  margin-left:10px;
+ }
  .price-box {
-  width:120px;
+  width:100px;
   height:30px;
   line-height:30px;
   float:left;
   margin-left:10px;
  }
  .order-address{
-  width:300px;
+  width:250px;
   height:30px;
   line-height:30px;
   float:left;
@@ -59,7 +66,7 @@
  .status {
   text-align:center;
   float:left;
-  width:200px;
+  width:180px;
   height:30px;
   line-height: 30px;
   margin-left:10px;
@@ -164,7 +171,6 @@
 .order-back {
 width:100%;
 height:100%;
-background-color:#dcdcdc;
 padding-top:30px;
 }
 .order {
