--- a/app/views/orders/complete.html.erb
+++ b/app/views/orders/complete.html.erb
@@ -5,9 +5,10 @@
 	  注文が完了しました
      </div>
 	  <div class="complete-text">
-	  お客様の注文番号は<span class="under">
-	  	<%= @order.order_number %></span>です。<br>
-	  	この番号は失くさないようにして下さい。<br>
+	  	ご購入ありがとうございます。<br>
+	  	お客様の購入番号は<span class="under"><%= @order.order_number %></span>です。<br>
+	  	引き続きSQUARE MUSICをよろしくお願いします。
+	  	<br>
 	  	<br>
 	  	注文した商品の詳細は<%= link_to 'こちら',user_order_path(:user_id => @order.user.id)%><br>
 	  	<br>
